[package]
name = "chatty"
version = "0.1.0"
authors = ["Clay Raynor <clay.raynor@stratifyd.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
simple_logger = "1.3"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }